// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectInput /> should have some hintText 1`] = `
<div
  class="base width_full"
>
  <div
    class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="base width_full height_full"
    >
      <div
        class="base display_flex position_relative center_mobile_base flexWrap_nowrap center_mobile_base"
      >
        <select
          autocomplete="off"
          class="base block appearance select flexGrow_1 input paddedInput_base base block appearance input display_flex width_full position_relative input_itself_root_base"
        >
          <option
            value="a"
          >
            Value 1
          </option>
          <option
            value="b"
          >
            Value 2
          </option>
          <option
            value="c"
          >
            Value 3
          </option>
        </select>
        <div
          class="base 4_mobile_base display_flex height_full position_absolute pointerEvents_none center_mobile_base flexShrink_0 arrow"
        >
          <i
            class="base display_block medium_mobile_base"
            role="presentation"
          >
            <svg
              class="base display_block width_full height_full"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="base display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_default_base"
        >
          Hello World!
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
  <p
    class="base textAlign_left root_base fontWeight_normal_base sizes_2_base 2_mobile_base 4_mobile_base hintText_base styleNode_base"
  >
    hint text
  </p>
</div>
`;

exports[`<SelectInput /> should match snapshot 1`] = `
<div
  class="base width_full"
>
  <div
    class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="base width_full height_full"
    >
      <div
        class="base display_flex position_relative center_mobile_base flexWrap_nowrap center_mobile_base"
      >
        <select
          autocomplete="off"
          class="base block appearance select flexGrow_1 input paddedInput_base base block appearance input display_flex width_full position_relative input_itself_root_base"
        >
          <option
            value="a"
          >
            Value 1
          </option>
          <option
            value="b"
          >
            Value 2
          </option>
          <option
            value="c"
          >
            Value 3
          </option>
        </select>
        <div
          class="base 4_mobile_base display_flex height_full position_absolute pointerEvents_none center_mobile_base flexShrink_0 arrow"
        >
          <i
            class="base display_block medium_mobile_base"
            role="presentation"
          >
            <svg
              class="base display_block width_full height_full"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="base display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_default_base"
        >
          Hello World!
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when active 1`] = `
<div
  class="base width_full"
>
  <div
    class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="base width_full height_full"
    >
      <div
        class="base display_flex position_relative center_mobile_base flexWrap_nowrap center_mobile_base"
      >
        <select
          autocomplete="off"
          class="base block appearance select flexGrow_1 input paddedInput_base base block appearance input display_flex width_full position_relative input_itself_root_base"
        >
          <option
            value="a"
          >
            Value 1
          </option>
          <option
            value="b"
          >
            Value 2
          </option>
          <option
            value="c"
          >
            Value 3
          </option>
        </select>
        <div
          class="base 4_mobile_base display_flex height_full position_absolute pointerEvents_none center_mobile_base flexShrink_0 arrow"
        >
          <i
            class="base display_block medium_mobile_base"
            role="presentation"
          >
            <svg
              class="base display_block width_full height_full"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="base display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base activeBorderColour_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base activeBorderColour_base"
        style="width: 16px;"
      >
        <label
          class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base activeColour_base root_base colours_neutral_base noWrap sizes_4_base placeholderPlacement_shifted_base"
        >
          Hello World!
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base activeBorderColour_base"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when touched 1`] = `
<div
  class="base width_full"
>
  <div
    class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="base width_full height_full"
    >
      <div
        class="base display_flex position_relative center_mobile_base flexWrap_nowrap center_mobile_base"
      >
        <select
          autocomplete="off"
          class="base block appearance select flexGrow_1 input paddedInput_base base block appearance input display_flex width_full position_relative input_itself_root_base"
        >
          <option
            value="a"
          >
            Value 1
          </option>
          <option
            value="b"
          >
            Value 2
          </option>
          <option
            value="c"
          >
            Value 3
          </option>
        </select>
        <div
          class="base 4_mobile_base display_flex height_full position_absolute pointerEvents_none center_mobile_base flexShrink_0 arrow"
        >
          <i
            class="base display_block medium_mobile_base"
            role="presentation"
          >
            <svg
              class="base display_block width_full height_full"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="base display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_default_base"
        >
          Hello World!
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when touched and invalid 1`] = `
<div
  class="base width_full"
>
  <div
    class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="base width_full height_full"
    >
      <div
        class="base display_flex position_relative center_mobile_base flexWrap_nowrap center_mobile_base"
      >
        <select
          autocomplete="off"
          class="base block appearance select flexGrow_1 input paddedInput_base base block appearance input display_flex width_full position_relative input_itself_root_base"
        >
          <option
            value="a"
          >
            Value 1
          </option>
          <option
            value="b"
          >
            Value 2
          </option>
          <option
            value="c"
          >
            Value 3
          </option>
        </select>
        <div
          class="base 4_mobile_base display_flex height_full position_absolute pointerEvents_none center_mobile_base flexShrink_0 arrow"
        >
          <i
            class="base display_block medium_mobile_base"
            role="presentation"
          >
            <svg
              class="base display_block width_full height_full"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="base display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_default_base"
        >
          Hello World!
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when touched and valid 1`] = `
<div
  class="base width_full"
>
  <div
    class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="base width_full height_full"
    >
      <div
        class="base display_flex position_relative center_mobile_base flexWrap_nowrap center_mobile_base"
      >
        <select
          autocomplete="off"
          class="base block appearance select flexGrow_1 input paddedInput_base base block appearance input display_flex width_full position_relative input_itself_root_base"
        >
          <option
            value="a"
          >
            Value 1
          </option>
          <option
            value="b"
          >
            Value 2
          </option>
          <option
            value="c"
          >
            Value 3
          </option>
        </select>
        <div
          class="base 4_mobile_base display_flex height_full position_absolute pointerEvents_none center_mobile_base flexShrink_0 arrow"
        >
          <i
            class="base display_block medium_mobile_base"
            role="presentation"
          >
            <svg
              class="base display_block width_full height_full"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="base display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_default_base"
        >
          Hello World!
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot with prefix icon 1`] = `
<div
  class="base width_full input-class"
>
  <div
    class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="base width_full height_full"
    >
      <i
        class="base display_block medium_mobile_base position_absolute pointerEvents_none iconRoot_base icon_prefix styleNode_base"
        role="presentation"
      >
        <svg
          class="base display_block width_full height_full"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
      <div
        class="base display_flex position_relative center_mobile_base flexWrap_nowrap center_mobile_base"
      >
        <select
          autocomplete="off"
          class="base block appearance select flexGrow_1 input paddedInput_base base block appearance input display_flex width_full position_relative input_itself_root_base input_itself_prefixed_base"
        />
        <div
          class="base 4_mobile_base display_flex height_full position_absolute pointerEvents_none center_mobile_base flexShrink_0 arrow"
        >
          <i
            class="base display_block medium_mobile_base"
            role="presentation"
          >
            <svg
              class="base display_block width_full height_full"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
              />
            </svg>
          </i>
        </div>
      </div>
    </div>
    <div
      class="base display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_defaultPrefixed_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;
